infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: yashraj1999/moderation
---
# here we are building cluster ip. 
# cluster ip used by pod to communicate with other pod. 
# if don't type in spec it by default will create clusterIP.

apiVersion: v1
kind: Service
metadata: 
  name: moderation-srv
spec: 
  selector: 
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
