infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: yashraj1999/query
---
# here we are building cluster ip. 
# cluster ip used by pod to communicate with other pod. 
# if don't type in spec it by default will create clusterIP.

apiVersion: v1
kind: Service
metadata: 
  name: query-srv
spec: 
  selector: 
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
